--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: abahmed/test
+          images: ghcr.io/abahmed/test
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
