--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,7 +25,8 @@ jobs:
         with:
           images: ghcr.io/abahmed/test
           labels: |
-            org.opencontainers.image.description: hello-hello
+            org.opencontainers.image.title=test
+            org.opencontainers.image.description=Another description
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
