--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,8 +26,7 @@ jobs:
           images: ghcr.io/abahmed/test
           labels: |
             org.opencontainers.image.title=test
-            org.opencontainers.image.description=https://github.com/abahmed/test/blob/$commit/README.md
-            org.opencontainers.image.source = "https://github.com/abahmed/test"
+            org.opencontainers.image.description=https://github.com/abahmed/test/blob/{{tag}}/README.md
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
